test/statements/elliot/loops/modifyIndicesSerial.good
modifyIndicesSerial.chpl:5: error: illegal lvalue in assignment
